@@ -367,10 +367,11 @@ name, IP address or host name. An example could look like:
 
 If this option is used several times, the last one will be used.
 .IP "-I/--head"
-(HTTP/FTP)
+(HTTP/FTP/FILE)
 Fetch the HTTP-header only! HTTP-servers feature the command HEAD
 which this uses to get nothing but the header of a document. When used
-on a FTP file, curl displays the file size only.
+on a FTP or FILE file, curl displays the file size and last modification
+time only.
 
 If this option is used twice, the second will again disable header only.
 .IP "-j/--junk-session-cookies"
